--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,7 @@
         "learning_management": "Learning Management",
         "assessment_hub": "Assessment Hub",
         "aI_zedny": "AI at Zedny",
+        "subscribe": "subscribe",
         "our_solutions": "Our Solutions",
         "for_business": "For Business",
         "for_individuals": "For Individuals",
@@ -19,8 +20,19 @@
         "our_story": "Our Story",
         "our_method": "Our Method",
         "contact_us": "Contact Us",
+        "our_team": "Our Team",
         "terms_service": "Terms Of Service",
         "manage_privacy": "Manage Privacy",
-        "manage_cookies": "Manage Cookies"
+        "manage_cookies": "Manage Cookies",
+
+        "our_policies" : "Our Policies",
+        "academic_integrity" : "Academic Integrity Policy",
+        "attendance_policy" : "Attendance Policy for Virtual Learning",
+        "intellectual_property" : "Intellectual Property and Copyright",
+        "technical_support" : "Technical Support Policy",
+        "user_manual" : "User Manual",
+        "academic_supervision" : "Academic Supervision",
+        "staff_responsibilities" : "Staff Preparations Responsibilities"
+
     }
 }
