add the arabic translation to the sidebar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,37 +2,57 @@
     "terms_service": "Terms Of Service",
     "manage_privacy": "Manage Privacy",
     "manage_cookies": "Manage Cookies",
-    "shared":{
-        "products_services": "Products & Services",
-        "competency_management": "Competency Management",
-        "personalized_learning": "Personalized Learning",
-        "gamified_learning": "Gamified Learning",
-        "learning_management": "Learning Management",
-        "assessment_hub": "Assessment Hub",
-        "aI_zedny": "AI at Zedny",
-        "subscribe": "subscribe",
-        "our_solutions": "Our Solutions",
-        "for_business": "For Business",
-        "for_individuals": "For Individuals",
-        "latest_news": "Get Our Latest News",
-        "email_address": "E-mail Address",
-        "company": "Company",
-        "our_story": "Our Story",
-        "our_method": "Our Method",
-        "contact_us": "Contact Us",
-        "our_team": "Our Team",
-        "terms_service": "Terms Of Service",
-        "manage_privacy": "Manage Privacy",
-        "manage_cookies": "Manage Cookies",
-
-        "our_policies" : "Our Policies",
-        "academic_integrity" : "Academic Integrity Policy",
-        "attendance_policy" : "Attendance Policy for Virtual Learning",
-        "intellectual_property" : "Intellectual Property and Copyright",
-        "technical_support" : "Technical Support Policy",
-        "user_manual" : "User Manual",
-        "academic_supervision" : "Academic Supervision",
-        "staff_responsibilities" : "Staff Preparations Responsibilities"
-
+    "shared": {
+      "products_services": "Products & Services",
+      "competency_management": "Competency Management",
+      "personalized_learning": "Personalized Learning",
+      "gamified_learning": "Gamified Learning",
+      "learning_management": "Learning Management",
+      "assessment_hub": "Assessment Hub",
+      "aI_zedny": "AI at Zedny",
+      "subscribe": "Subscribe",
+      "our_solutions": "Our Solutions",
+      "for_business": "For Business",
+      "for_individuals": "For Individuals",
+      "latest_news": "Get Our Latest News",
+      "email_address": "E-mail Address",
+      "company": "Company",
+      "our_story": "Our Story",
+      "our_method": "Our Method",
+      "contact_us": "Contact Us",
+      "our_team": "Our Team",
+      "terms_service": "Terms Of Service",
+      "manage_privacy": "Manage Privacy",
+      "manage_cookies": "Manage Cookies",
+      "our_policies": "Our Policies",
+      "academic_integrity": "Academic Integrity Policy",
+      "attendance_policy": "Attendance Policy for Virtual Learning",
+      "intellectual_property": "Intellectual Property and Copyright",
+      "technical_support": "Technical Support Policy",
+      "user_manual": "User Manual",
+      "academic_supervision": "Academic Supervision",
+      "staff_responsibilities": "Staff Preparations Responsibilities",
+      "dashboard": "Dashboard",
+      "logoAlt": "Company Logo"
+    },
+    "sidebar": {
+      "dashboard": "Dashboard",
+      "learningProgress": "Learning Progress",
+      "gamifiedPerformance": "Gamified Performance",
+      "leaderboard": "Leaderboard",
+      "contentCatalogue": "Content Catalogue",
+      "pathways": "Pathways",
+      "courses": "Courses",
+      "books": "Books",
+      "laraVoiceAssistant": "Lara Voice Assistant",
+      "assistantsSpace": "Assistants Space",
+      "subscriptions": "Subscriptions",
+      "generalInfo": "General Info",
+      "statusSummary": "Status Summary",
+      "assignments": "Assignments",
+      "certificates": "Certificates",
+      "assessment": "Assessment",
+      "instructors": "Instructors"
     }
-}
+  }
+  
