edit the i18n.js file to check the lang in the localstorage first befor render the data

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -43,10 +43,10 @@
       "assistantsSpace": "مساحة المساعدين",
       "subscriptions": "الاشتراكات",
       "generalInfo": "معلومات عامة",
-      "statusSummary": "ملخص الحالة",
+      "statusSummary": "الملخص",
       "assignments": "المهام",
       "certificates": "الشهادات",
-      "assessment": "التقييم",
+      "assessment": "التقييمات",
       "instructors": "المدربون"
     }
   }
