edit the create assistant compounent to allow the arabic language

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -17,6 +17,7 @@
       "our_story": "قصتنا",
       "our_method": "منهجيتنا",
       "contact_us": "تواصل معنا",
+      "our_team": "فريقنا",
       "our_policies": "سياساتنا",
       "academic_integrity": "سياسة النزاهة الأكاديمية",
       "attendance_policy": "سياسة الحضور الافتراضي",
@@ -62,6 +63,36 @@
       "scriptAssistantDescription": "مساعد النص مخصص في كتابة النص...",
       "tokensUsed": "التوكنات المستخدمة",
       "availableRequests": "الطلبات المتاحة"
+    },
+    "createAssistant": {
+      "title": "إنشاء مساعدك الجديد",
+      "goBack": "العودة",
+      "assistantName": "اسم المساعد",
+      "titlePlaceholder": "العنوان",
+      "assistantType": "نوع المساعد",
+      "typePlaceholder": "نوع / قائمة منسدلة",
+      "option1": "خيار 1",
+      "option2": "خيار 2",
+      "assistantColor": "لون المساعد",
+      "assistantVoice": "صوت المساعد",
+      "voicePlaceholder": "قائمة منسدلة للصوت",
+      "voiceOption1": "خيار الصوت 1",
+      "voiceOption2": "خيار الصوت 2",
+      "voiceOption3": "خيار الصوت 3",
+      "assistantDomain": "مجال المساعد",
+      "domainPlaceholder": "قائمة منسدلة للمجال",
+      "domainOption1": "إدارة الأعمال",
+      "domainOption2": "إدارة الأعمال 2",
+      "domainOption3": "إدارة الأعمال 3",
+      "assistantDescription": "وصف المساعد",
+      "descriptionPlaceholder": "أدخل الوصف...",
+      "uploadFile": "تحميل الملف",
+      "dragDrop": "اسحب وأسقط أو انقر للتحميل",
+      "fileSizeNote": "الحجم الأقصى للملف هو 25 ميغابايت",
+      "dataSource1": "مصدر البيانات 1",
+      "dataSource2": "مصدر البيانات 2",
+      "addMoreFiles": "إضافة المزيد من الملفات (يجب أن تكون ملفات Word قابلة للقراءة أو ملفات PDF)",
+      "saveAndCreate": "حفظ وإنشاء"
     }
   }
   
